--- a/deb/usr/share/applications/gwget.desktop
+++ b/deb/usr/share/applications/gwget.desktop
@@ -5,5 +5,5 @@ Icon=emblem-downloads
 Terminal=false
 Type=Application
 Categories=Network;FileTransfer;
-MimeType=x-scheme-handler/http;x-scheme-handler/https;x-scheme-handler/ftp;x-scheme-handler/ftps;
+MimeType=x-scheme-handler/http;x-scheme-handler/https;x-scheme-handler/ftp;x-scheme-handler/ftps;x-scheme-handler/data;
 StartupNotify=true
