--- a/deb/DEBIAN/control
+++ b/deb/DEBIAN/control
@@ -4,7 +4,7 @@ Section: net
 Installed-Size: 
 Maintainer: Andras Hrubak <andreas@uucp.hu>
 Architecture: all
-Version: 0.2
+Version: 
 Depends: python-gtk2, wget
 Recommends: mimeopen-gui | yazzy-xutils, python-xattr
 Suggests: 
